2006-07-24  Francis Kung  <fkung@redhat.com>

	* javax/swing/JComboBox.java
	(DefaultKeySelectionManager): Implemented.
	(createDefaultKeySelectionManager): Implemented.
	(getKeySelectionManager): Implemented.
	(processKeyEvent): Removed duplicate code.
	* javax/swing/JPopupMenu.java
	(selectionModel): Changed visibility.
	* javax/swing/plaf/basic/BasicComboBoxUI.java
	(KeyHandler.keyPressed): Added navigation keys.
	(configureEditor): Add key listener.
	(installListeners): Install focus listener to combo box.
	(isNavigationKey): Added enter, escape, and tab.
	(selectPreviousPossibleValue): Added out of bounds check.
	(unconfigureEditor): Remove key listener.
	* javax/swing/plaf/metal/MetalComboBoxButton.java
	(paintComponent): Highlight combo box when in focus.

2006-07-24  Roman Kennke  <kennke@aicas.com>

	* javax/swing/SwingUtilities.java
	(isLeftMouseButton): Fixed condition.
	* java/awt/LightweightDispatcher.java
	(handleMouseEvent): Dispatch MOUSE_ENTERED even when mouse
	is dragged.

2006-07-24  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(setPaint): Fixed scaleX and scaleY.

2006-07-24  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTable.java
	(handleInsert): Repaint the whole table for variable row
	height tables and an optimized region otherwise.
	(handleDelete): Likewise.
	(handleUpdate): Likewise.

2006-07-24  Mario Torre  <neugens@limasoftware.net>

	* gnu/java/awt/peer/gtk/GtkToolkit.java (createDragGestureRecognizer):
	now explicity registerListeners on GtkMouseDragGestureRecognizer
	instance.
	* gnu/java/awt/dnd/GtkMouseDragGestureRecognizer.java
	(unregisterListeners): new method, overrided from base class
	to rise visibility (from protected to public).
	(registerListeners): Likewise.
	(GtkMouseDragGestureRecognizer): fixed potential threading issue:
	removed call to registerListeners from the constructor.

2006-07-23  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Check for moc and moc-qt4.
